<resources>
    <string name="app_name">Quiz Game</string>
    <string name="password">Password</string>
    <string name="old_password">Old Password</string>
    <string name="remember_me">Remember me?</string>
    <string name="new_user">New User</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="re_password">Re-Password</string>
    <string name="country">Country</string>
    <string name="birthdate">Birthdate</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="sing_up">Sing up</string>
    <string name="sign_in">Sign In</string>
    <string name="exist">Exist</string>
    <string name="settings">Settings</string>
    <string name="start">Start</string>
    <string name="login_information_not_match">The username and password do not match for any account!!</string>
    <string name="write_the_full_name_correctly">Please write the full name correctly</string>
    <string name="write_the_email_correctly">Please write the email correctly</string>
    <string name="write_the_password_correctly">Please write the password correctly</string>
    <string name="enter_the_password_identically">Please enter the password identically</string>
    <string name="choose_a_country_name">Please choose a country name</string>
    <string name="enter_date_of_birth">Please enter date of birth</string>
    <string name="wrong_answer">Wrong answer</string>
    <string name="correct_answer">Correct answer</string>
    <string name="sound_game">Game sounds</string>
    <string name="notification">Game notifications</string>
    <string name="level">level</string>
    <string name="profile">Profile</string>
    <string name="my_points">my points:</string>
    <string name="welcome">Welcome</string>
    <string name="delete_history_game">delete game history</string>
    <string name="create_new_account">Create a new account</string>
    <string name="edit_profile">Edit profile</string>
    <string name="new_password">New password</string>
    <string name="logout">logout</string>
    <string name="finish_time">time is over</string>
    <string name="dont_have_enough_points_for_skip">You don\'t have enough points</string>
    <string name="skip">skip</string>
    <string name="really_want_to_skip">Do you really want to skip this question? \nThis will deduct 1 point from you!!</string>
    <string name="answer_true_or_false">Answer true or false</string>
    <string name="choose_the_correct_answer">Choose the correct answer</string>
    <string name="complete_with_the_correct_answer">Complete with the correct answer</string>
    <string name="login">Login</string>
    <string name="delete_successfuly">Deleted successfully</string>
    <string name="delete">delete</string>
    <string name="entire_game_history_will_be_deleted">Your entire game history will be deleted, are you sure about that?!</string>
    <string name="ffalse">false</string>
    <string name="ttrue">true</string>
    <string name="chancel">chancel</string>
    <string name="ziro_ziro">00</string>
    <string name="required_point">required points:</string>
    <string name="you_have_finished_this_level_before">You have finished this level before!!</string>
    <string name="levels">levels</string>

</resources>