<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activites.ActivityWelcome">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_180sdp"
        android:fitsSystemWindows="true"
        android:scaleType="fitXY"
        android:src="@drawable/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="@dimen/_24ssp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26" />

    <TextView
        android:id="@+id/tvWelcomeMassage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:text="Omar Mustafa"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buStart"
        style="@style/MaterialButtonLogin"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:text="@string/start"
        app:layout_constraintBottom_toTopOf="@+id/buSettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buSettings"
        style="@style/MaterialButtonLogin"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:text="@string/settings"
        app:layout_constraintBottom_toTopOf="@+id/buExist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buStart" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buExist"
        style="@style/MaterialButtonLogin"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:text="@string/exist"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buSettings" />

</androidx.constraintlayout.widget.ConstraintLayout>