<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.ActivitySignUp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="#ffffff" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextInputLayout"
            style="@style/TextInputLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_26sdp"
            android:hint="@string/full_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/te_fullName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_44sdp"
                android:drawableStart="@drawable/ic_text"
                android:drawablePadding="20dp"
                android:inputType="textPersonName"
                android:textSize="@dimen/_13ssp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextInputLayout2"
            style="@style/TextInputLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:hint="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/te_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_44sdp"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="20dp"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/_13ssp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/linearLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextInputLayout2">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TextInputLayout4"
                style="@style/TextInputLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_2sdp"
                android:layout_weight="1"
                android:hint="@string/password"
                app:counterEnabled="true"
                app:counterMaxLength="20">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/te_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_44sdp"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="20dp"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textSize="@dimen/_13ssp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TextInputLayout5"
                style="@style/TextInputLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_weight="1"
                android:hint="@string/re_password"
                app:counterEnabled="true"
                app:counterMaxLength="20">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/te_rePassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_44sdp"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="20dp"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textSize="@dimen/_13ssp" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextInputLayout6"
            style="@style/ExposedDropdownMenuSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_7sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutPassword">

            <AutoCompleteTextView
                android:id="@+id/spinner_countries"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_44sdp"
                android:drawableStart="@drawable/ic_location"
                android:drawablePadding="20dp"
                android:hint="@string/country"
                android:inputType="none"
                android:textSize="@dimen/_13ssp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/bu_birthdate"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_44sdp"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/corners_stroke_primary_color"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextInputLayout6">


            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_date" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_birthdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/birthdate"
                android:textColor="@color/gray"
                android:textSize="@dimen/_13ssp" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/genderRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:checkedButton="@id/male"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bu_birthdate">

            <RadioButton
                android:id="@+id/male"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:background="@drawable/gender_background_selector"
                android:button="@android:color/transparent"
                android:drawableTop="@drawable/ic_male"
                android:paddingTop="@dimen/_6sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:text="@string/male"
                android:textAlignment="center"
                android:textColor="@drawable/gender_icon_text_selector"
                android:textSize="@dimen/_13ssp"
                app:drawableTint="@drawable/gender_icon_text_selector" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_marginStart="@dimen/_13sdp"
                android:background="@drawable/gender_background_selector"
                android:button="@android:color/transparent"
                android:drawableTop="@drawable/ic_female"
                android:paddingTop="@dimen/_6sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:text="@string/female"
                android:textAlignment="center"
                android:textColor="@drawable/gender_icon_text_selector"
                android:textSize="@dimen/_13ssp"
                app:drawableTint="@drawable/gender_icon_text_selector" />

        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buSingUp"
            style="@style/MaterialButtonLogin"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/sing_up"
            android:layout_margin="@dimen/_16sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genderRadioGroup" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>